fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  overflow-x: hidden;
   font-family: "Poppins";
 }
 
@@ -56,12 +55,12 @@ li {
 }
 
 .slider-section {
-  width: 100%;
   display: flex;
   height: 100vh;
+  width: 100vw;
   flex-direction: column;
   position: relative;
-
+  overflow-x: hidden;
   align-items: center;
   background-image: url("assets/logo-elite-icon.png");
   background-repeat: no-repeat;
@@ -71,9 +70,9 @@ li {
 .slides-container {
   display: flex;
   flex-direction: row;
-  flex: 1;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
+
   transform: translateX(-100%);
 }
 
